Wed Jun 16 18:23:00 BST 1999  Alex Roberts  <bse@gedit.pn.org>
	(From patch supplied by Akira Higuchi <a-higuti@math.sci.hokudai.ac.jp>)
	
	* po/ja.po: New file.
	
	* src/commands.c: Marked a string for translation. Without this,
	  gnome_app_remove_menu_range() may fail.
	
	* src/gE_plugin_api.c: Include config.h first. Or gettext will
	  not work.
	
	* src/main.h:
	  src/gE_mdi.c:
	  src/gE_prefs.c:
	  src/gE_prefs_box.c:
	  src/gedit.c: Added fontset support. We use fontsets if a
	  fontset is supplied for text widgets.
	  
	* src/search.c: Added multibyte support.
	
Sat Jun 12 19:28:38 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* gE_mdi.c: Removed references to the gE_documents GList.. i think this
	  will improve stability and performance (my excuse.. so blahh =P )

Sat Jun 12 13:04:30 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* gE_document.c: (gE_window_new) Ok, weirdness... i've ptu a gE_document_new
	  call in here and it works now! before it would complain then die..
	  Ah well, now there is a default doc when you open a new window.
	  (need to implement a if this is the last doc, and you close it, close
	  the window..)
	  
	  Taken the Line button out of a hbox.. it's obvious what it is when you
	  ptu the mouse over it.. and none of the other dock items would fit if
	  it had the box either..

Thu Jun 10 16:42:56 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* gE_document.c: (gE_window_new) Using gtk_window_set_default_size 
	  finally fixes the window-jumping-back-to-the-usize-setting! GtkWidgets
	  don't like being resized smaller than the size they have been
	  specified! grr... this works.. no more email about it!
	  
	  Made the statusbar, Column indicator, and Line button GnomeDockItem's..
	  Now you can customise the bottom row (i'll add some prefs box
	  stuff for these features).. Problem: Statusbar is now a hardcoded
	  size (kinda.. window_width minus 160 (size of the other two dock