@@ -18,10 +18,10 @@
  * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-#include <config.h>
 #include <stdio.h>
 #include <string.h>
 #include <gtk/gtk.h>
+#include <config.h>
 #include <gnome.h>
 
 #include "main.h"
