@@ -1,3 +1,8 @@
+1999-06-16  Tomas Ogren  <stric@ing.umu.se>
+
+	* src/gE_about.c src/gE_plugin_api.c src/gE_prefs_box.c src/search.c
+	  Misc i18n-fixes
+
 Wed Jun 16 18:23:00 BST 1999  Alex Roberts  <bse@gedit.pn.org>
 	(From patch supplied by Akira Higuchi <a-higuti@math.sci.hokudai.ac.jp>)
 	
